# atlas

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.spec  pyproject.toml
.github/workflows/: dependency-review.yml
configs/: blacklist.json  browsers.json  types.json
docs/: architecture.md  overview.md
docs/adr/: 0001-programming-language.md  0002-gui-framework.md  0003-code-standards.md  0004-separation-of-concerns.md  0005-project-structure.md  0006-package-structuring.md  0007-import-strategy.md  README.md
installer/: Atlas.iss
scripts/: setup_dev.bat  setup_dev.sh
src/atlas/: main.py
src/atlas/backup/: __init__.py  archive.py  attribute.py  disk.py  filter.py  pipeline.py  profile.py  size.py  worker.py
src/atlas/display/: __init__.py  controller.py  controls.py  popup.py  signals.py  window.py
src/atlas/lib/: __init__.py  browsers.py  directories.py  integration.py  permissions.py  read.py  themes.py
src/atlas/tests/: __init__.py
src/atlas/tests/integration/: __init__.py
src/atlas/tests/integration/backup/: __init__.py  test_pipeline.py  test_worker.py
src/atlas/tests/unit/: __init__.py
src/atlas/tests/unit/backup/: __init__.py  test_archive.py  test_attribute.py  test_disk.py  test_filter.py  test_pipeline.py  test_profile.py  test_size.py  test_worker.py
src/atlas/tests/unit/display/: __init__.py  conftest.py  test_controller.py  test_controls.py  test_popup.py  test_signals.py  test_window.py
src/atlas/tests/unit/lib/: __init__.py  test_browsers.py  (+5 more)
src/atlas/ui/: __init__.py  interface.py
(+2 files in other folders)
