[project]
name = "atlas"
version = "1.0.0"
description = "Atlas is a browser profile backup application."
requires-python = ">=3.8"
authors = [{ name = "Michael Dorman" }]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
keywords = ["backup", "browser", "profiles"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyQt6>=6.5"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0"
]

[project.scripts]
atlas = "atlas.main:main"

[tool.pytest.ini_options]
testpaths = ["src/atlas/tests/unit"]
